--- a/src/cookies-policy.html
+++ b/src/cookies-policy.html
@@ -17,12 +17,10 @@
                 </div>
                 <nav class="menu__body">
                     <ul class="menu__list">
-                        <li class="menu__item"><a data-goto="#projects" href="#" class="menu__link">Unsere Fälle</a>
-                        </li>
+                        <li class="menu__item"><a data-goto="#projects" href="#" class="menu__link">Projects</a></li>
                         <li class="menu__item"><a data-goto="#services" href="#" class="menu__link">Services</a></li>
-                        <li class="menu__item"><a data-goto="#payments" href="#" class="menu__link">Payment
-                            Möglichkeiten</a></li>
-                        <li class="menu__item"><a data-goto="#team" href="#" class="menu__link">Unser Team </a></li>
+                        <li class="menu__item"><a data-goto="#payments" href="#" class="menu__link">Payments</a></li>
+                        <li class="menu__item"><a data-goto="#team" href="#" class="menu__link">Our team </a></li>
                     </ul>
                 </nav>
             </div>
