--- a/src/html/form.html
+++ b/src/html/form.html
@@ -2,11 +2,11 @@
     <div class="form__background"></div>
     <div class="form__left-block left-block">
         <div class="left-block__image">
-            <img class="" src="img/form/3dman.png" alt="3dman">
+            <img class="" src="img/form/sammy-finance.png"  alt="3dman">
         </div>
         <div class="form__roll-images roll-images">
-            <img class="roll-images--left" src="img/form/roll-left.png" width="155" alt="roll">
-            <img class="roll-images--right" src="img/form/roll-right.png" width="136" alt="roll">
+            <img class="roll-images--left" src="img/clock-1.svg" width="155" alt="clock">
+            <img class="roll-images--right" src="img/clock-2.svg" width="136" alt="clock">
         </div>
     </div>
     <div class="form__right-block right-block">
