--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -1,25 +1,24 @@
 <div class="hero layout">
     <div class="left-block">
         <div>
-            <img src="img/hero/logo_shopify.svg" alt="shopify logo">
             @@include('components/heading.html', {
-            "title_text": "Marktverständis. Schnelligkeit. <span>Qualität.</span>",
-            "subtitle_text": "Sie bekommen von uns 12 Jahre Erfahrung im Bauen und Betreiben von Online Shops"
+            "title_text": "Market understanding. Speed. <span>Quality.</span>",
+            "subtitle_text": "We have more than 10 years of experience in building and operating online shops"
             })
         </div>
         @@include('components/button.html', {
-        "button_title": "Anfragen"
+        "button_title": "Get started"
         })
     </div>
     <div class="right-block">
         <div class="right-block__background"></div>
         <div class="right-block__image">
-            <img class="" src="img/hero/shoppingfun.png" alt="the boy in the cart">
+            <img class="" src="img/hero/sammy-man-studying.png" alt="the boy in the cart">
         </div>
     </div>
     <div class="hero__roll-images roll-images">
-        <img class="roll-images--left" src="img/hero/roll-left.png" width="79" alt="roll">
-        <img class="roll-images--right" src="img/hero/roll-right.png" width="114" alt="roll">
+        <img class="roll-images--left" src="img/clock-1.svg" width="79" alt="clock">
+        <img class="roll-images--right" src="img/clock-2.svg" width="114" alt="clock">
 
     </div>
 
