--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -2,27 +2,27 @@
     @@include('components/image-blocks-animated.html', {})
 
     @@include('components/heading.html', {
-    "title_text": "Ein Paar unserer Projekte:",
+    "title_text": "Our projects",
     "subtitle_text": ''
     })
     <ul class="cards">
         <li class="cards__item">
             <div class="cards__image-wrap">
                 <div class="cards__image-hover-zoom">
-                    <img class="cards__image" src="img/projects/mariemur.png" alt="">
+                    <img class="cards__image" src="img/projects/cloud-storage.png" alt="cloud storage">
                 </div>
             </div>
             <div class="cards__content-wrap">
                 <div class="cards-content">
-                    <h2 class="cards-content__title">Marie Mur</h2>
-                    <p class="cards-content__subtitle">Shopify e-commerce</p>
+                    <h2 class="cards-content__title">Inkubate</h2>
+                    <p class="cards-content__subtitle">Fast and secure cloud storage</p>
                 </div>
                 <div class="cards__link">
-                    <a href="https://mariemur.com/"
+                    <a href="#"
                        class="cards__link--link"
                        target="_blank"
                     >
-                        zur webseite
+                        read more
                         <img class="cards__link--image" src="img/projects/arrow.svg" alt="arrow">
                     </a>
                 </div>
@@ -31,20 +31,20 @@
         <li class="cards__item">
             <div class="cards__image-wrap">
                 <div class="cards__image-hover-zoom">
-                    <img class="cards__image" src="img/projects/naturalsupl.png" alt="">
+                    <img class="cards__image" src="img/projects/fitness-app.png" alt="fitness">
                 </div>
             </div>
             <div class="cards__content-wrap">
                 <div class="cards-content">
-                    <h2 class="cards-content__title">Natural Supplements 2x4 </h2>
-                    <p class="cards-content__subtitle">Shopify e-commerce</p>
+                    <h2 class="cards-content__title">FitzApp</h2>
+                    <p class="cards-content__subtitle">Fitness app </p>
                 </div>
                 <div class="cards__link">
-                    <a href="https://2x4.com/"
+                    <a href="#"
                        class="cards__link--link"
                        target="_blank"
                     >
-                        zur webseite
+                        read more
                         <img class="cards__link--image" src="img/projects/arrow.svg" alt="arrow">
                     </a>
                 </div>
@@ -53,20 +53,20 @@
         <li class="cards__item">
             <div class="cards__image-wrap">
                 <div class="cards__image-hover-zoom">
-                    <img class="cards__image" src="img/projects/dogrook.png" alt="">
+                    <img class="cards__image" src="img/projects/digiency.png" alt="digiency">
                 </div>
             </div>
             <div class="cards__content-wrap">
                 <div class="cards-content">
-                    <h2 class="cards-content__title">Dogrook</h2>
-                    <p class="cards-content__subtitle">Shopify e-commerce</p>
+                    <h2 class="cards-content__title">Digiency</h2>
+                    <p class="cards-content__subtitle">Web design agency</p>
                 </div>
                 <div class="cards__link">
-                    <a href="https://dogrook.com/"
+                    <a href="#"
                        class="cards__link--link"
                        target="_blank"
                     >
-                        zur webseite
+                        read more
                         <img class="cards__link--image" src="img/projects/arrow.svg" alt="arrow">
                     </a>
                 </div>
@@ -75,20 +75,20 @@
         <li class="cards__item">
             <div class="cards__image-wrap">
                 <div class="cards__image-hover-zoom">
-                    <img class="cards__image" src="img/projects/dragons.png" alt="">
+                    <img class="cards__image" src="img/projects/fusiontech.png" alt="fusiontech">
                 </div>
             </div>
             <div class="cards__content-wrap">
                 <div class="cards-content">
-                    <h2 class="cards-content__title">Dragons of Walton Street</h2>
-                    <p class="cards-content__subtitle">Shopify e-commerce</p>
+                    <h2 class="cards-content__title">Fusiontech</h2>
+                    <p class="cards-content__subtitle">Technology Agency Landing Page</p>
                 </div>
                 <div class="cards__link">
-                    <a href="https://dragonsofwaltonstreet.com/"
+                    <a href="#"
                        target="_blank"
                        class="cards__link--link"
                     >
-                        zur webseite
+                        read more
                         <img class="cards__link--image" src="img/projects/arrow.svg" alt="arrow">
                     </a>
                 </div>
@@ -96,6 +96,6 @@
         </li>
     </ul>
     @@include('components/button.html', {
-    "button_title": "Anfragen"
+    "button_title": "Get started"
     })
 </div>
