--- a/src/html/team.html
+++ b/src/html/team.html
@@ -2,17 +2,19 @@
     @@include('components/image-blocks-animated.html', {})
 
     <div class="heading">
-        <h1 class="heading__title">Unser Team</h1>
-        <p class="heading__subtitle">Die Wortfügung wurde gebildet aus dem lateinischen do‌lōrem (Schmerz) und ipsum
-            (selbst) aus dem mehrbändigen Werk "De finibus bonorum et malorum", Liber Primus, (erster Absatz, Zeile 32)
-            des römischen Philosophen, Politikers und Schriftstellers Cicero. Der Text ist weder nach Wortwahl oder
-            Schreibung nach echtes Latein, die meisten Worte gibt es gar nicht, das gilt auch für "Lorem". Einige
-            Fragmente erinnern jedoch deutlich an Zeilen aus o. g. Text, z. B. an den Absatz "Neque porro quisquam est,
-            qui dolorem ipsum, quia dolor sit, amet, consectetur, adipisci velit." </p>
+        <h1 class="heading__title">Our Team</h1>
+        <p class="heading__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a leo a massa tempus
+            viverra at at metus. Ut a pretium quam, ut faucibus diam. Nam commodo augue ligula, et venenatis elit luctus
+            eu. Nulla iaculis mauris ac ex ornare luctus quis eget nibh. In ac nisi mi. Fusce ullamcorper ipsum in lacus
+            congue tempor. Ut et orci id velit posuere luctus sit amet tempor tellus. Nunc dignissim blandit dui sed
+            sagittis. In vel libero at quam interdum pretium. Etiam luctus lectus non ante sodales consequat. Sed
+            molestie laoreet orci, ac congue magna efficitur nec. Duis ut consectetur sapien. Donec bibendum tincidunt
+            rhoncus. Sed semper hendrerit lorem, vitae tincidunt nisi. Vivamus faucibus mauris eget dui fringilla, eu
+            ornare felis malesuada. Quisque pharetra at lorem et pulvinar.</p>
     </div>
     <div class="team__image">
         <a href="#popup-image" class="popup-link">
-            <img src="img/team.png"  alt="team picture">
+            <img src="img/team.png" alt="team picture">
         </a>
     </div>
 
@@ -21,7 +23,7 @@
             <div class="popup__content popup__content_image">
                 <a href="#header" class="popup__close close-popup"><img src="img/ico-close.svg" alt="close icon"></a>
                 <div class="popup__image">
-                    <img src="img/team.png"  alt="team picture">
+                    <img src="img/team.png" alt="team picture">
                 </div>
             </div>
         </div>
