responsive to all blocks

--- a/src/html/payment.html
+++ b/src/html/payment.html
@@ -2,26 +2,26 @@
     @@include('components/image-blocks-animated.html', {})
 
     @@include('components/heading.html', {
-    "title_text": "Payment Möglichkeiten ",
-    "subtitle_text": "Ihr Projekt - Ihre Regeln!"
+    "title_text": "Payment Options",
+    "subtitle_text": "Your project - your rules!"
     })
     <div class="payments__card card">
         <ul id="card-tabs" class="card__header">
             <li id="variant1" class="card__item active">
                 <p class="card__item--variant">Variant 01</p>
-                <h3 class="card__item--title">Einsteigerangebot </h3>
+                <h3 class="card__item--title">Lorem ipsum</h3>
             </li>
             <li id="variant2" class="card__item">
                 <p class="card__item--variant">Variant 02</p>
-                <h3 class="card__item--title">Festpreis</h3>
+                <h3 class="card__item--title">Lorem ipsum</h3>
             </li>
             <li id="variant3" class="card__item">
                 <p class="card__item--variant">Variant 03</p>
-                <h3 class="card__item--title">Kooperationsmodell</h3>
+                <h3 class="card__item--title">Lorem ipsum</h3>
             </li>
             <li id="variant4" class="card__item">
                 <p class="card__item--variant">Variant 04</p>
-                <h3 class="card__item--title">Mietkauf</h3>
+                <h3 class="card__item--title">Lorem ipsum</h3>
             </li>
         </ul>
         <div id="content1" class="card__content active">
@@ -30,15 +30,14 @@
                 <img src="img/payment/einsteigerangebot.png" alt="einsteigerangebot" class="left-block__image">
             </div>
             <div class="card__content--right-block right-block">
-                <h2 class="right-block__title">Einsteigerangebot</h2>
-                <p class="right-block__text">Ein einfacher Shop für kleines Geld? Geht! Mit uns gehen Sie schnell und
-                    sicher online. Wir sind an deiner Seite und entwickeln in kürzester Zeit den passenden Shop für Ihr
-                    Projekt!</p>
-                <h2 class="right-block__title-accent">ab 14 Tagen</h2>
-                <p class="right-block__subtitle">basis online shop</p>
+                <h2 class="right-block__title">Lorem ipsum</h2>
+                <p class="right-block__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin
+                    eros pellentesque mattis bibendum. Mauris ac condimentum orci.</p>
+                <h2 class="right-block__title-accent">14 days</h2>
+                <p class="right-block__subtitle">basic plan</p>
 
                 @@include('components/button.html', {
-                "button_title": "Anfragen"
+                "button_title": "Get started"
                 })
             </div>
         </div>
@@ -48,15 +47,15 @@
                 <img src="img/payment/festpreis.png" alt="" class="left-block__image">
             </div>
             <div class="card__content--right-block right-block">
-                <h2 class="right-block__title">Festpreis</h2>
-                <p class="right-block__text">Wir bieten keine Dumpingpreise an und treiben dann den Aufwand in die Höhe,
-                    sondern wir arbeiten grundsätzlich auf Festpreis Basis. So ist vor Projektstart klar was getan
-                    werden soll und wieviel es kosten wird.</p>
-                <h2 class="right-block__title-accent">from 2K Euro</h2>
-                <p class="right-block__subtitle">basis online shop</p>
+                <h2 class="right-block__title">Lorem ipsum</h2>
+                <p class="right-block__text">Suspendisse potenti. Vestibulum sodales vulputate lectus eget blandit.
+                    Nullam facilisis imperdiet dui quis malesuada. Aenean tortor urna, vestibulum ut velit et, rutrum
+                    malesuada mi. </p>
+                <h2 class="right-block__title-accent">Lorem ipsum</h2>
+                <p class="right-block__subtitle">Lorem ipsum</p>
 
                 @@include('components/button.html', {
-                "button_title": "Anfragen"
+                "button_title": "Get started"
                 })
             </div>
         </div>
@@ -66,14 +65,15 @@
                 <img src="img/payment/kooperationsmodell.png" alt="" class="left-block__image">
             </div>
             <div class="card__content--right-block right-block">
-                <h2 class="right-block__title">Kooperationsmodell</h2>
-                <p class="right-block__text">Sie brauchen einen Partner der einige Bereiche übernehmen kann? Lasset uns
-                    sprechen!
-                </p>
-                <h2 class="right-block__title-accent">Entwicklung und andere Vollzeitdienste</h2>
+                <h2 class="right-block__title">Lorem ipsum</h2>
+                <p class="right-block__text">In sit amet elementum odio. Pellentesque maximus ac nulla id
+                    condimentum. Etiam et elementum enim, quis convallis ante. Vestibulum ante ipsum primis in faucibus
+                    orci luctus et ultrices posuere cubilia curae; In sagittis, mi sit amet egestas rhoncus, erat risus
+                    porttitor lacus, ac dignissim justo dui non ligula.</p>
+                <h2 class="right-block__title-accent">Lorem ipsum</h2>
 
                 @@include('components/button.html', {
-                "button_title": "Anfragen"
+                "button_title": "Get started"
                 })
             </div>
         </div>
@@ -83,14 +83,15 @@
                 <img src="img/payment/mietkauf.png" alt="" class="left-block__image">
             </div>
             <div class="card__content--right-block right-block">
-                <h2 class="right-block__title">Mietkauf</h2>
-                <p class="right-block__text">Sie möchten Ihr Cash Flow in Blick behalten? Verständlich!
-                </p>
-                <h2 class="right-block__title-accent">für 2 bis 10 Zahlungen</h2>
-                <p class="right-block__subtitle">basis online shop</p>
+                <h2 class="right-block__title">Lorem ipsum</h2>
+                <p class="right-block__text">Etiam ac elit ipsum. Class aptent taciti sociosqu ad litora torquent per
+                    conubia nostra, per inceptos himenaeos. Sed faucibus nisl in arcu ullamcorper rhoncus. Proin sed
+                    efficitur tellus, vitae pellentesque libero. </p>
+                <h2 class="right-block__title-accent">Lorem ipsum</h2>
+                <p class="right-block__subtitle">Lorem ipsum</p>
 
                 @@include('components/button.html', {
-                "button_title": "Anfragen"
+                "button_title": "Get started"
                 })
             </div>
         </div>
