--- a/src/html/services.html
+++ b/src/html/services.html
@@ -3,7 +3,7 @@
 
     @@include('components/heading.html', {
     "title_text": "Services",
-    "subtitle_text": "Wir sind shopify profis durch und durch und können folgende Ihnen folgende Leistungen anbieten"
+    "subtitle_text": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin eros pellentesque mattis bibendum"
     })
     <ul class="services__list">
         <li class="services__item">
@@ -11,13 +11,12 @@
                 <div class="services__item--content item-content">
                 <div class="services__item--header">
                     <div class="services__item--number">01.</div>
-                    <div class="item-content__title">Bedarfsanalyse</div>
+                    <div class="item-content__title">UX Design</div>
                 </div>
-                    <div class="item-content__text">Definition Ihrer Zielgruppen und entsprechend relevanter Shopify
-                        Features
+                    <div class="item-content__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sollicitudin eros pellentesque mattis bibendum. Mauris ac condimentum orci.
                     </div>
                 </div>
-                <img src="img/services/brain.svg" width="76px" alt="brain">
+                <img src="img/services/ux-interface.svg" width="76px" alt="interface">
             </div>
         </li>
         <li class="services__item">
@@ -25,14 +24,11 @@
                 <div class="services__item--content item-content">
                     <div class="services__item--header">
                         <div class="services__item--number">02.</div>
-                        <div class="item-content__title">Konzeption</div>
+                        <div class="item-content__title">Game Design</div>
                     </div>
-                    <div class="item-content__text">Wir erstellen Layouts und beraten Sie zur Informations-, Kategorie-
-                        und
-                        Produktstruktur
-                    </div>
+                    <div class="item-content__text">Maecenas efficitur laoreet est vel porta. Integer nec sodales velit, at tempus justo. Donec rutrum odio id mauris condimentum viverra a non dui. Nam ut dictum felis. Sed laoreet lacus ac efficitur blandit.</div>
                 </div>
-                <img src="img/services/innovation.svg" width="76px" alt="konzeption">
+                <img src="img/services/gaming.svg" width="76px" alt="gaming">
             </div>
         </li>
         <li class="services__item">
@@ -40,12 +36,9 @@
                 <div class="services__item--content item-content">
                 <div class="services__item--header">
                     <div class="services__item--number">03.</div>
-                    <div class="item-content__title">Design</div>
+                    <div class="item-content__title">Graphic Design</div>
                 </div>
-                    <div class="item-content__text">Wir beraten Sie bei der Shopify Theme Auswahl und programmieren bei
-                        Bedarf Ihr Wunschtheme
-                        individuell um
-                    </div>
+                    <div class="item-content__text">Suspendisse potenti. Vestibulum sodales vulputate lectus eget blandit. Nullam facilisis imperdiet dui quis malesuada. Aenean tortor urna, vestibulum ut velit et, rutrum malesuada mi.</div>
                 </div>
                 <img src="img/services/design.svg" width="76px" alt="design">
             </div>
@@ -55,11 +48,11 @@
                 <div class="services__item--content item-content">
                 <div class="services__item--header">
                     <div class="services__item--number">04.</div>
-                    <div class="item-content__title">Mobile</div>
+                    <div class="item-content__title">Web Design</div>
                 </div>
-                    <div class="item-content__text">Perfektes Bild über alle Geräte hinweg</div>
+                    <div class="item-content__text">Etiam ac elit ipsum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed faucibus nisl in arcu ullamcorper rhoncus. </div>
                 </div>
-                <img src="img/services/mobile.svg" width="76px" alt="mobile">
+                <img src="img/services/web-design.svg" width="76px" alt="web-design">
             </div>
         </li>
         <li class="services__item">
@@ -67,13 +60,11 @@
                 <div class="services__item--content item-content">
                 <div class="services__item--header">
                     <div class="services__item--number">05.</div>
-                    <div class="item-content__title">Development</div>
+                    <div class="item-content__title">App Development</div>
                 </div>
-                    <div class="item-content__text">Wir erstellen Ihren neuen Shopify-Shop, nehmen Anpassungen und
-                        Optimierungen vor
-                    </div>
+                    <div class="item-content__text">Donec tristique enim ut dolor laoreet blandit. Nam sodales sagittis mattis. Quisque fermentum odio eget neque luctus gravida.</div>
                 </div>
-                <img src="img/services/development.svg" width="76px" alt="development">
+                <img src="img/services/mobile-development.svg" width="76px" alt="development">
             </div>
         </li>
         <li class="services__item">
@@ -81,61 +72,11 @@
                 <div class="services__item--content item-content">
                 <div class="services__item--header">
                     <div class="services__item--number">06.</div>
-                    <div class="item-content__title">Rechtliches</div>
+                    <div class="item-content__title">Digital Marketing</div>
                 </div>
-                    <div class="item-content__text">Impressum, Mengenangaben, Datenschutz oder AGB - wir sind zwar keine
-                        Juristen, aber wissen
-                        auf
-                        was man achten muss
-                    </div>
+                    <div class="item-content__text">Suspendisse potenti. Vestibulum sodales vulputate lectus eget blandit. Nullam facilisis imperdiet dui quis malesuada. Aenean tortor urna, vestibulum ut velit et, rutrum malesuada mi. </div>
                 </div>
-                <img src="img/services/rechtliches.svg" width="76px" alt="rechtliches">
-            </div>
-        </li>
-        <li class="services__item">
-            <div class="services__item--wrap">
-                <div class="services__item--content item-content">
-                <div class="services__item--header">
-                    <div class="services__item--number">07.</div>
-                    <div class="item-content__title">Shopify Plus</div>
-                </div>
-                    <div class="item-content__text">Wir haben praktische Erfahrung mit den Funktionen und Vorteilen
-                        von Shopify Plus
-                    </div>
-                </div>
-                <img src="img/services/shopifyPlus.svg" width="76px" alt="shopify plus">
-            </div>
-        </li>
-        <li class="services__item">
-            <div class="services__item--wrap">
-                <div class="services__item--content item-content">
-                <div class="services__item--header">
-                    <div class="services__item--number">08.</div>
-                    <div class="item-content__title">Shop Umzug</div>
-                </div>
-                    <div class="item-content__text">Wir migrieren Ihren alten Shop (z.B. Magento) mit Artikel, Kunden,
-                        Bestellungen, usw. hin
-                        zu
-                        Shopify
-                    </div>
-                </div>
-                <img src="img/services/shopUmzug.svg" width="76px" alt="shop umzug">
-            </div>
-        </li>
-        <li class="services__item">
-            <div class="services__item--wrap">
-                <div class="services__item--content item-content">
-                <div class="services__item--header">
-                    <div class="services__item--number">09.</div>
-                    <div class="item-content__title">Shopify Schnittstellen</div>
-                </div>
-                    <div class="item-content__text">Entwickeln und verbinden wir Schnittstellen zu allen großen
-                        Dienstleistern.
-                        Kanalübergreifende
-                        Shopping Erlebnisse durch direkte Anbindung an Marktplätze (z.B. eBay, Amazon) oder Social Media
-                    </div>
-                </div>
-                <img src="img/services/shopifySchnitt.svg" width="76px" alt="shopify schnittstellen">
+                <img src="img/services/digital-marketing.svg" width="76px" alt="digital-marketing">
             </div>
         </li>
     </ul>
